Update CORS to allow all origins and create AuthController with register/login endpoints